# RSPerl

./: .gitignore  Changes  Changes.html  DESCRIPTION  INSTALL  NAMESPACE  README.md  cleanup  cleanup.in  confdefs.h  config.status  configure  configure.ac  configure.in  modules.pl
R/: Converters.R  First.lib.R  PerlClear.R  PerlExpr.R  PerlGet.R  PerlInit.R  PerlInterperter.R  PerlLength.R  PerlNames.R  PerlNew.R  PerlPackage.R  PerlReference.R  PerlReflect.R  PerlSet.R  PerlUndef.R  RSUtils.S  dispatch.R  foreignReference.R  parseEval.R  perl5lib.R  perl5lib.R.in  perlClasses.R  referenceHandler.R  setReferenceHandler.R
inst/Docs/: FAQ.html  Features.html  R.html  RFromPerl.html
inst/examples/: Dend.pl  Encode.pl  Matrix.R  POSIX.R  RInit.pl  Rclosure.pl  Rundef.pl  Smethods.pl  args.pl  attributes.pl  auto.pl  basicMatrix.pl  callback.pl  check.S  checkMethod.R  class.pl  converter.pl  converter2.pl  dataframe.pl  exit.pl  fasta.R  fasta.pl  funcs.pl  gc.pl  gccTU.R  genbank.R  genbank.pl  hash.R  hier.pl  homogeneous.R  hong.pl  index.html  init.pl  io.pl  ipFind.R  ipFind.pl  lm.pl  main.pl  matrix.pl  matrix1.pl  (+19 more)
inst/scripts/: RReferences.pm  RS.pl  RSPerl.bsh  RSPerl.bsh.in  RSPerl.csh  RSPerl.csh.in
inst/tests/: plot.pl  test1.pl  test2.pl  test3.pl
man/: Perl.Rd  PerlClear.Rd  PerlDiscard.Rd  PerlExists.Rd  PerlExpr.Rd  PerlFile.Rd  PerlGetArray.Rd  PerlGetCode.Rd  PerlInit.Rd  PerlInterpreter.Rd  PerlLength.Rd  PerlNames.Rd  PerlNew.Rd  PerlNewArray.Rd  PerlPackage.Rd  PerlReferenceDollar.Rd  PerlReferenceObjects.Rd  PerlReferenceSubset.Rd  PerlSetHash.Rd  PerlStashInfo.Rd  PerlTerminate.Rd  PerlType.Rd  PerlTypes.Rd  PerlUndef.Rd  addConverter.Rd  foreignReference.Rd  getNumPerlConverters.Rd  getPerlClasses.Rd  getPerlDynModules.Rd  getPerlScript.Rd  mkRef.Rd  parseEval.Rd  perlInitArgs.Rd  perlModuleLoaded.Rd  referenceHandlerGenerator.Rd  setPerlHandler.Rd
src/: Converters.c  Converters.h  ForeignReference.c  ForeignReference.h  GeneralConverters.c  MYMETA.json  MYMETA.yml  Makefile.PL  Makefile.PL.in  Makefile.perl  Makevars  Makevars.in  R.c  R.pm.in  R.xs  RPerlElements.c  RPerlElements.h  RPerlEval.c  RPerlInit.c  RPerlNew.c  RPerlNew.h  RPerlReference.c  RPerlVars.c  RPerlVars.h  RSPerl.h  Reflectance.c  Reflectance.h  RinPerlMakefile  RinPerlMakefile.in  UserConverters.c  UserConverters.h  Utils.c  Utils.h  tryEval.h  xsinit.c
src/blib/lib/: R.pm
src/blib/lib/auto/R/: autosplit.ix
src/blib/man3/: R.3pm  RReferences.3pm
